--- a/templates/file_upload_to_s3.html
+++ b/templates/file_upload_to_s3.html
@@ -68,7 +68,7 @@
       </h5>
       <label>
 
-        <b> •You need to enable access to less secure apps in order to receive the transcription file to your email; you can do this by going to <a href="https://myaccount.google.com/lesssecureapps">my account</a> if you are already logged into your google account or by visiting <a href="">support.google</a>.</b><br><br>
+        <b> •Firstly, make sure you enable access to less secure apps in order to receive the transcription file to your email; you can do this by going to <a href="https://myaccount.google.com/lesssecureapps">my account</a> if you are already logged into your google account or by visiting <a href="">support.google</a>.</b><br><br>
         <b>•The transcription file will be sent as a .json file which can be opened using notepad
          </b><br><br>
         <!-- •Alternatively you can follow the instructions:<br>
