--- a/templates/file_upload_to_s3.html
+++ b/templates/file_upload_to_s3.html
@@ -48,7 +48,7 @@
     <div class="card-body ">
       <form action="/upload" method="post" enctype="multipart/form-data">
       <p class="card-text">1) Select a file to transcribe:</p>
-        <input type="file" name="file" ><br><br>
+        <input type="file" name="file" multiple><br><br>
         
         <p class="card-text">2) Enter email address to receive transcription</p>
         <label>E-mail:</label>
